tests/ui/borrowck/borrowck-init-in-called-fn-expr.rs
fn main() {
    let j = || -> isize {
        let i: isize;
        i //~ ERROR E0381
    };
    j();
}
